🛡️ Add TypeScript guardrails and CI protection
✅ Added GitHub Actions CI workflow
✅ Added lint-staged + husky pre-commit hooks
✅ Added TypeScript guardrails documentation
✅ Added type-check scripts to package.json
✅ Moved test-icons.tsx to proper location

🎯 Result: Automated protection against TypeScript errors
- Pre-commit hooks block commits with TS errors
- CI pipeline fails on TS/build/lint issues
- Comprehensive documentation prevents regressions

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,32 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "lib": ["ES2020", "DOM", "DOM.Iterable"],
-    "jsx": "react-jsx",
+    "lib": [
+      "ES2020",
+      "DOM",
+      "DOM.Iterable"
+    ],
+    "jsx": "preserve",
     "module": "ESNext",
     "moduleResolution": "Bundler",
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./*"],
-      "@components/*": ["./components/*"],
-      "@pages/*": ["./pages/*"],
-      "@types/*": ["./types/*"]
+      "@/*": [
+        "./*"
+      ],
+      "@components/*": [
+        "./components/*"
+      ],
+      "@pages/*": [
+        "./pages/*"
+      ],
+      "@types/*": [
+        "./types/*"
+      ]
     },
-    "types": ["node"],
+    "types": [
+      "node"
+    ],
     "strict": true,
     "skipLibCheck": true,
     "noEmit": true,
@@ -27,6 +41,20 @@
       }
     ]
   },
-  "include": ["./**/*.ts", "./**/*.tsx", "next-env.d.ts", ".next/types/**/*.ts"],
-  "exclude": ["node_modules", "dist", "build", "src/**", "**/*.test.*", "**/*.spec.*", "tests/**", "__tests__/**"]
-} 
+  "include": [
+    "./**/*.ts",
+    "./**/*.tsx",
+    "next-env.d.ts",
+    ".next/types/**/*.ts"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist",
+    "build",
+    "src/**",
+    "**/*.test.*",
+    "**/*.spec.*",
+    "tests/**",
+    "__tests__/**"
+  ]
+}
