🛡️ HARDENING: Add bulletproof TypeScript protection system
✅ Enhanced CI with caching and strict checks
✅ Added ESLint rules to ban test imports in app code
✅ Added production redirect for test-icons route
✅ Created strict CI TypeScript config (tsconfig.ci.json)
✅ Enhanced pre-commit with belt-and-suspenders approach
✅ Added pre-push hook for build validation
✅ Added EditorConfig for team consistency
✅ Updated package.json with CI and development scripts
✅ Enhanced TypeScript guardrails documentation
✅ Fixed global type conflicts

🎯 Result: Multi-layer protection system
- Pre-commit: lint-staged + TypeScript checks
- Pre-push: build validation
- CI: Strict TypeScript + build + lint
- Documentation: Clear guidelines prevent regressions

🚀 TypeScript errors will stay at 0 permanently!

--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint",
     "type-check": "tsc --noEmit",
     "type-check:watch": "tsc --noEmit --watch",
+    "type-check:strict": "tsc --noEmit -p tsconfig.ci.json",
+    "ci": "npm run type-check:strict && npm run build && npm run lint",
     "prepare": "husky install"
   },
   "lint-staged": {
     "*.{ts,tsx}": [
       "eslint --fix",
-      "tsc --noEmit"
+      "tsc --noEmit -p tsconfig.json"
     ],
     "*.{js,jsx}": [
       "eslint --fix"
