--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,11 +13,19 @@ jobs:
           node-version: '20'
           cache: 'npm'
       
+      - name: Cache Next.js build
+        uses: actions/cache@v4
+        with:
+          path: |
+            .next/cache
+            node_modules/.cache
+          key: ${{ runner.os }}-next-${{ hashFiles('**/package-lock.json') }}
+      
       - name: Install dependencies
         run: npm ci
       
-      - name: TypeScript check
-        run: npx tsc --noEmit
+      - name: TypeScript check (strict)
+        run: npx tsc --noEmit -p tsconfig.ci.json
       
       - name: Build application
         run: npm run build
