--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "autoprefixer": "^10.4.16",
     "eslint": "^8.53.0",
     "eslint-config-next": "^14.0.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
     "husky": "^8.0.3",
     "lint-staged": "^15.2.0",
     "postcss": "^8.4.31",
