--- a/.gitignore
+++ b/.gitignore
@@ -1,121 +1,107 @@
-# Dependencies
-node_modules/
-venv/
-__pycache__/
-*.pyc
-*.pyo
-*.pyd
-.Python
-env/
-pip-log.txt
-pip-delete-this-directory.txt
-.tox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.log
-.git
-.mypy_cache
-.pytest_cache
-.hypothesis
-
-# Next.js
-.next/
-out/
-build/
-dist/
-
-# Environment variables
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# IDE
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
-
-# OS
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
 
 # Data and uploads
-data/uploads/
-uploads/
+# Dependencies
+# DynamoDB Local files
+# Environment variables
+# FuseBox cache
+# IDE
+# Legacy code archive
+# Logs
+# Microbundle cache
+# Next.js
+# OS
+# OWLIN junk
+# Optional REPL history
+# Optional eslint cache
+# Optional npm cache directory
+# Output of 'npm pack'
+# Runtime data
+# Serverless directories
+# TernJS port file
+# Yarn Integrity file
+# next.js build output
+# nuxt.js build output
+# parcel-bundler cache (https://parceljs.org/)
+# vuepress build output
+**/*.log
+**/*.sqlite
+**/*.zip
+*.cover
 *.db
+*.log
+*.pid
+*.pid.lock
+*.pyc
+*.pyd
+*.pyo
+*.seed
 *.sqlite
 *.sqlite3
-
-# Legacy code archive
-_archive/
-
-# Logs
-logs/
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Runtime data
-pids
-*.pid
-*.seed
-*.pid.lock
-
-# Optional npm cache directory
-.npm
-
-# Optional eslint cache
+*.swo
+*.swp
+*.tgz
+*~
+.DS_Store
+.DS_Store?
+.Python
+.Spotlight-V100
+.Trashes
+._*
+.cache
+.coverage
+.coverage.*
+.dynamodb/
+.env
+.env.development.local
+.env.local
+.env.production.local
+.env.test.local
 .eslintcache
-
-# Microbundle cache
+.fusebox/
+.git
+.hypothesis
+.idea/
+.mypy_cache
+.next
+.next/
+.node_repl_history
+.npm
+.nuxt
+.parcel-cache
+.pytest_cache
 .rpt2_cache/
 .rts2_cache_cjs/
 .rts2_cache_es/
 .rts2_cache_umd/
-
-# Optional REPL history
-.node_repl_history
-
-# Output of 'npm pack'
-*.tgz
-
-# Yarn Integrity file
-.yarn-integrity
-
-# parcel-bundler cache (https://parceljs.org/)
-.cache
-.parcel-cache
-
-# next.js build output
-.next
-
-# nuxt.js build output
-.nuxt
-
-# vuepress build output
-.vuepress/dist
-
-# Serverless directories
+.server.*.log
 .serverless/
-
-# FuseBox cache
-.fusebox/
-
-# DynamoDB Local files
-.dynamodb/
-
-# TernJS port file
 .tern-port
+.tox/
+.vscode/
+.vuepress/dist
+.yarn-integrity
+/backups/
+/data/
+/tmp/
+Thumbs.db
+__pycache__/
+_archive/
+build/
+coverage.xml
+data/*.db
+data/uploads/
+dist/
+ehthumbs.db
+env/
+logs/
+node_modules/
+nosetests.xml
+npm-debug.log*
+out/
+pids
+pip-delete-this-directory.txt
+pip-log.txt
+uploads/
+venv/
+yarn-debug.log*
+yarn-error.log*
