security: remove sensitive files and improve .gitignore
- Remove database files (.db-shm, .db-wal) from repository
- Remove backup files (.bak, .backup) from repository
- Update .gitignore to prevent future commits of:
  - Database files (*.db, *.sqlite, *.db-shm, *.db-wal)
  - Backup files (*.bak, *.backup)
  - Log files (*.log, backend/.server.*.log)
  - Python cache (__pycache__, *.pyc)
  - Environment files (.env, *.pem, *.key)
  - Development artifacts

This ensures sensitive data and temporary files are not tracked.

--- a/.gitignore
+++ b/.gitignore
@@ -105,3 +105,30 @@ uploads/
 venv/
 yarn-debug.log*
 yarn-error.log*
+
+# Database files and backups
+*.db
+*.db-shm
+*.db-wal
+*.sqlite
+*.sqlite3
+*.bak
+*.bak.*
+backend/.server.*.log
+*.log
+
+# Python cache
+__pycache__/
+*.pyc
+*.pyo
+
+# Environment and secrets
+.env
+.env.*
+*.pem
+*.key
+id_rsa*
+
+# Development artifacts
+*.backup
+*.backup.*
