--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,11 +1,24 @@
-fastapi==0.115.0
-uvicorn[standard]==0.30.6
-pydantic==2.8.2
-python-multipart==0.0.9
-pytesseract==0.3.13
+# Core dependencies with version pins to prevent OCR regressions
+paddleocr==2.7.0.3
+paddlepaddle==2.6.1
+rapidfuzz==3.9.6
+pypdfium2==4.30.0
 opencv-python==4.10.0.84
-pillow==10.4.0
-pdf2image==1.17.0
-numpy==2.1.1
-paddleocr>=2.7.0
-python-dotenv 
+
+# FastAPI and web framework
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+python-multipart==0.0.6
+
+# Database
+sqlite3
+
+# Image processing
+Pillow==10.1.0
+numpy==1.24.3
+
+# OCR fallback
+pytesseract==0.3.10
+
+# Utilities
+python-dotenv==1.0.0
