--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "owlin-app",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "engines": {
     "node": ">=18.19.0",
     "npm": ">=9.0.0"
@@ -37,6 +38,7 @@
     "@radix-ui/react-toast": "^1.1.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.0.0",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.294.0",
     "next": "^14.0.0",
     "react": "^18.2.0",
