--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,49 +1,54 @@
 {
   "compilerOptions": {
+    "target": "ES2022",
+    "module": "ESNext",
+    "moduleResolution": "Bundler",
+    "jsx": "preserve",
+    "strict": true,
+    "skipLibCheck": true,
     "baseUrl": ".",
     "paths": {
       "@/*": [
         "./*"
       ]
     },
-    "jsx": "preserve",
-    "skipLibCheck": true,
-    "noEmit": true,
-    "moduleResolution": "bundler",
     "resolveJsonModule": true,
-    "strict": false,
-    "target": "ES2022",
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "noEmit": true,
     "lib": [
       "dom",
       "es2022"
     ],
-    "allowJs": false,
-    "esModuleInterop": true,
-    "module": "esnext",
     "isolatedModules": true,
     "types": [
       "node"
     ],
+    "allowJs": true,
     "incremental": true,
     "plugins": [
       {
         "name": "next"
       }
-    ],
-    "strictNullChecks": true
+    ]
   },
   "include": [
-    "**/*.ts",
-    "**/*.tsx",
+    "frontend/**/*",
+    "next-env.d.ts",
     ".next/types/**/*.ts"
   ],
   "exclude": [
     "node_modules",
-    "backend", 
+    ".next",
+    "dist",
+    "build",
+    "backend",
     "scripts",
     "tests",
+    "**/*.spec.ts",
+    "**/*.spec.tsx",
     "**/*.test.ts",
     "**/*.test.tsx",
-    "_owlin_sources"
+    "playwright/**"
   ]
 }
