Add confidence scoring system and review functionality

--- a/.github/env.example
+++ b/.github/env.example
@@ -7,19 +7,28 @@ VITE_API_BASE_URL=http://127.0.0.1:8000
 # NEXT_PUBLIC_API_BASE_URL=http://127.0.0.1:8000
 
 # Backend feature flags
-FEATURE_OCR_PIPELINE_V2=false
+# Production-ready defaults (matching backend/config.py)
+FEATURE_OCR_PIPELINE_V2=true
 OCR_ARTIFACT_ROOT=data/uploads
 
-# Phase 2 Accuracy Upgrade Flags
-FEATURE_OCR_V2_PREPROC=false
-FEATURE_OCR_V2_LAYOUT=false
-CONF_FIELD_MIN=0.55
-CONF_PAGE_MIN=0.60
+# Phase 2 Accuracy Upgrade Flags (ENABLED for production)
+FEATURE_OCR_V2_PREPROC=true
+FEATURE_OCR_V2_LAYOUT=true
+CONF_FIELD_MIN=0.5
+CONF_PAGE_MIN=0.5
 
 # Phase 3 Tables + Templates + Donut + LLM Flags
-FEATURE_OCR_V3_TABLES=false
+FEATURE_OCR_V3_TABLES=true
 FEATURE_OCR_V3_TEMPLATES=false
 FEATURE_OCR_V3_DONUT=false
 FEATURE_OCR_V3_LLM=false
-CONF_FALLBACK_PAGE=0.45
-CONF_FALLBACK_OVERALL=0.50
+CONF_FALLBACK_PAGE=0.3
+CONF_FALLBACK_OVERALL=0.3
+
+# LLM Extraction (ENABLED for production)
+FEATURE_LLM_EXTRACTION=true
+LLM_OLLAMA_URL=http://localhost:11434
+LLM_TIMEOUT_SECONDS=120
+LLM_MAX_RETRIES=3
+LLM_BBOX_MATCH_THRESHOLD=0.7
+LLM_VALIDATION_ERROR_THRESHOLD=0.10
